--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,21 @@
 // Navigation code here
+nav {
+  h1 {
+    background-color: rgb(244, 243, 244);
+    text-align: center;
+    font-size: 50px;
+    padding-top: 20px;
+  }
+  ul {
+    display: flex;
+    justify-content: center;
+    background-color: rgb(244, 243, 244);
+    height: 60px;
+    align-items: center;
+
+    li {
+      font-size: 16px;
+      margin: 20px;
+    }
+  }
+}
