--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,17 +1,14 @@
 // Home Content
 
 .home {
-
   .intro {
-
     h2 {
       padding: 15px;
     }
 
     p {
-      padding:0 15px;
+      padding: 0 15px;
     }
-  
   }
 
   .space-images {
@@ -20,10 +17,12 @@
     width: 100%;
 
     img {
-      width: 28%;
-      margin: 20px 2.5%;
-      border-radius: 20px;
-      height: 100%;
+      // width: 28%;
+      // margin: 20px 2.5%;
+      // border-radius: 20px;
+      // height: 100%;
+
+      .img(28%, 20px, 2.5%, 20px, 100%);
     }
   }
 
@@ -64,7 +63,7 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+
       img {
         width: 100%;
         height: auto;
@@ -72,4 +71,4 @@
       }
     }
   }
-}// home
+} // home
