--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,7 @@
 // Mixins Here
+.heading(@bg-color, @text-al, @font-size, @paddinng-top) {
+  background-color: @bg-color;
+  text-align: @al-cont;
+  font-size: @font-size;
+  padding-top: @paddinng-top;
+}
