--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,11 +1,9 @@
 // Navigation code here
 nav {
   h1 {
-    background-color: rgb(244, 243, 244);
-    text-align: center;
-    font-size: 50px;
-    padding-top: 20px;
+    .heading(rgb(244, 243, 244), center, 50px, 20px);
   }
+
   ul {
     display: flex;
     justify-content: center;
