--- a/css/index.css
+++ b/css/index.css
@@ -229,6 +229,16 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  background-color: #1a1e2c;
+  border-radius: 5px;
+  font-size: 16px;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  width: 100px;
+  font-weight: 500px;
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
