--- a/less/home-page.less
+++ b/less/home-page.less
@@ -17,11 +17,6 @@
     width: 100%;
 
     img {
-      // width: 28%;
-      // margin: 20px 2.5%;
-      // border-radius: 20px;
-      // height: 100%;
-
       .img(28%, 20px, 2.5%, 20px, 100%);
     }
   }
@@ -57,6 +52,13 @@
       }
 
       .btn {
+        .btn(rgb(26, 30, 44), 5px);
+        font-size: 16px;
+        color: white;
+        padding: 10px;
+        text-align: center;
+        width: 100px;
+        font-weight: 500px;
       }
     }
 
