--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,12 @@
 
 .home {
   .intro {
+    img {
+      @media @mobile {
+        width: 100%;
+        max-width: 100%;
+      }
+    }
     h2 {
       padding: 15px;
     }
@@ -54,6 +60,8 @@
 
     @media @mobile {
       flex-direction: column;
+      align-items: center;
+      padding: 20px;
     }
 
     .walk-text {
@@ -87,10 +95,15 @@
           background-color: white;
           border: 1px solid rgb(26, 30, 44);
         }
-      }
-
-      @media @mobile {
-        width: 150px;
+        @media @mobile {
+          width: 100%;
+          height: 60px;
+          margin: 0 auto;
+          padding: 0;
+          display: inline-block;
+          line-height: 60px;
+          text-align: center;
+        }
       }
     }
 
