--- a/css/index.css
+++ b/css/index.css
@@ -195,6 +195,9 @@ footer {
     margin: 5px;
   }
 }
+.home .intro img {
+  border-radius: 2.5%;
+}
 @media (max-width: 500px) {
   .home .intro img {
     width: 100%;
@@ -254,6 +257,8 @@ footer {
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    margin-top: 10px;
+    padding: 0 20px;
   }
 }
 .home .walk .walk-text {
@@ -291,7 +296,7 @@ footer {
   .home .walk .walk-text .btn {
     width: 100%;
     height: 60px;
-    margin: 0 auto;
+    margin: 10px auto;
     padding: 0;
     display: inline-block;
     line-height: 60px;
