--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,7 @@
 .home {
   .intro {
     img {
+      border-radius: 2.5%;
       @media @mobile {
         width: 100%;
         max-width: 100%;
@@ -62,6 +63,8 @@
       flex-direction: column;
       align-items: center;
       padding: 20px;
+      margin-top: 10px;
+      padding: 0 20px;
     }
 
     .walk-text {
@@ -98,7 +101,7 @@
         @media @mobile {
           width: 100%;
           height: 60px;
-          margin: 0 auto;
+          margin: 10px auto;
           padding: 0;
           display: inline-block;
           line-height: 60px;
