--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,10 @@
 // Home Content
 
 .home {
+  margin-top: 15%;
+  @media @mobile {
+    margin-top: 27%;
+  }
   .intro {
     img {
       border-radius: 2.5%;
