--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,12 @@
 // Navigation code here
 nav {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 90%;
+  margin-bottom: 40px;
+
   h1 {
     .heading(rgb(244, 243, 244), center, 50px, 20px);
   }
