--- a/less/home-page.less
+++ b/less/home-page.less
@@ -96,6 +96,7 @@
         width: 100px;
         font-weight: 500px;
         box-sizing: border-box;
+        text-decoration: none;
 
         &:hover {
           color: rgb(26, 30, 44);
