--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,6 +7,11 @@ nav {
   opacity: 90%;
   margin-bottom: 40px;
 
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+
   h1 {
     .heading(rgb(244, 243, 244), center, 50px, 20px);
   }
