--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,12 +5,17 @@
   @media @mobile {
     margin-top: 27%;
   }
+
   .intro {
     img {
       border-radius: 2.5%;
       @media @mobile {
         width: 100%;
         max-width: 100%;
+      }
+
+      @media @iPhone8 {
+        margin-top: 5%;
       }
     }
     h2 {
