--- a/less/navigation.less
+++ b/less/navigation.less
@@ -14,6 +14,10 @@ nav {
 
   h1 {
     .heading(rgb(244, 243, 244), center, 50px, 20px);
+
+    @media @iPhone8 {
+      font-size: 40px;
+    }
   }
 
   ul {
@@ -26,6 +30,11 @@ nav {
     li {
       font-size: 16px;
       margin: 20px;
+
+      @media @mobile {
+        font-size: 14px;
+        margin: 10px;
+      }
     }
   }
 }
